--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,16 +1,24 @@
-
 name: ci
 on: [push, pull_request]
+
 jobs:
-  build:
+  node:
     runs-on: ubuntu-latest
+    defaults:
+      run:
+        working-directory: server
+
     steps:
       - uses: actions/checkout@v4
+
       - uses: actions/setup-node@v4
-        with: { node-version: 20 }
-      - name: Install
-        working-directory: server
+        with:
+          node-version: 20
+          cache: npm
+          cache-dependency-path: server/package-lock.json
+
+      - name: Install dependencies
         run: npm ci || npm i
-      - name: Test
-        working-directory: server
+
+      - name: Smoke check
         run: node -e "console.log('ok')"
